# NPS-Latam

./: .env  .env   Dockerfile  README.md  README_APP.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci+cd.yaml  drift_monitor.yaml  hf_sync.yaml
Data/: chatbot_logs.csv  synthetic_nps_latam.csv
config/: drift_config.yaml
mlruns/0/: meta.yaml
mlruns/170297830942766563/: meta.yaml
mlruns/170297830942766563/5223db4cce54455d8a9c46daafefe7f1/: meta.yaml
mlruns/170297830942766563/5223db4cce54455d8a9c46daafefe7f1/metrics/: accuracy  chatbot_interactions_count  f1_score  roc_auc
mlruns/170297830942766563/5223db4cce54455d8a9c46daafefe7f1/outputs/m-9aa5ef9d65f14258a94a1464d4f7573e/: meta.yaml
mlruns/170297830942766563/5223db4cce54455d8a9c46daafefe7f1/tags/: mlflow.runName
mlruns/170297830942766563/models/m-9aa5ef9d65f14258a94a1464d4f7573e/: meta.yaml
mlruns/170297830942766563/models/m-9aa5ef9d65f14258a94a1464d4f7573e/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlruns/170297830942766563/models/m-9aa5ef9d65f14258a94a1464d4f7573e/metrics/: accuracy  chatbot_interactions_count  f1_score  roc_auc
mlruns/170297830942766563/models/m-9aa5ef9d65f14258a94a1464d4f7573e/tags/: mlflow.source.git.commit  mlflow.source.name
src/: TF_Proyecto_(TF)_Business_Predictive_Analytics.ipynb
src/nps_latam/: __init__.py  api.py  app.py  chatbot.py  config.py  data_pipeline.py  data_utils.py  drift_detection.py  evaluation.py  genai_features.py  generate_data.py  model.py  model_training.py  train_mlflow.py
